# landuse_v1

./: LICENSE.txt  MANIFEST.in.txt  README.md.txt  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
landuse_v1/Data/Yearly/DE_airtemp_NUTS0_2018/: DE_airtemp_NUTS0_2018.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS0_2019/: DE_airtemp_NUTS0_2019.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS0_2020/: DE_airtemp_NUTS0_2020.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS0_2021/: DE_airtemp_NUTS0_2021.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS0_2022/: DE_airtemp_NUTS0_2022.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS1_2018/: DE_airtemp_NUTS1_2018.dbf  DE_airtemp_NUTS1_2018.shp
landuse_v1/Data/Yearly/DE_airtemp_NUTS1_2019/: DE_airtemp_NUTS1_2019.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS1_2020/: DE_airtemp_NUTS1_2020.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS1_2021/: DE_airtemp_NUTS1_2021.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS1_2022/: DE_airtemp_NUTS1_2022.dbf  DE_airtemp_NUTS1_2022.shx
landuse_v1/Data/Yearly/DE_airtemp_NUTS2_2018/: DE_airtemp_NUTS2_2018.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS2_2019/: DE_airtemp_NUTS2_2019.dbf  DE_airtemp_NUTS2_2019.shp
landuse_v1/Data/Yearly/DE_airtemp_NUTS2_2020/: DE_airtemp_NUTS2_2020.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS2_2021/: DE_airtemp_NUTS2_2021.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS2_2022/: DE_airtemp_NUTS2_2022.dbf
landuse_v1/Data/Yearly/DE_airtemp_NUTS3_2018/: DE_airtemp_NUTS3_2018.dbf
landuse_v1/handlers/: nuts.py
(+217 files in other folders)
